# pyvensim

./: .gitignore  README.md  notebook_test.ipynb  predator_prey.ipynb  pyproject.toml  test_calibration.ipynb
api/: expression.py  main.py  schemas.py  session.py
api/routes/: scenarios.py  sensitivity.py  shocks.py
data/: calibration_data_test.xlsx
examples/: economics_growth.py  fish_population.py  predator_prey_model.py  sir_model.py
exemples/: economics_growth.py  fish_population.py  main.py  predator_prey_model.py  sir_model.py
models/: __init__.py  auxiliary.py  calibrator.py  flow.py  scenario.py  scenario_manager.py  simulation.py  stock.py  system_component.py  visualization.py
models/calibration/: __init__.py  calibrator.py
models/core/: __init__.py  auxiliary.py  flow.py  stock.py  system_component.py
models/engine/: simulation.py
models/scenario/: __init__.py  scenario.py  scenario_manager.py
models/visualization/: __init__.py  visualization.py
notebooks/: notebook_test.ipynb  predator_prey.ipynb
tests/: conftest.py  test_auxiliary.py  test_calibrator.py  test_flow.py  test_scenario.py  test_scenario_manager.py  test_simulation.py  test_stock.py  test_system_component.py
tests/test_api/: conftest.py  test_expression.py  test_scenarios.py  test_sensitivity.py  test_session.py  test_shocks.py
