[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvensim"
version = "0.1.0"
description = "A Python implementation of Vensim for system dynamics simulation"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pandas-stubs",
    "scipy-stubs",
    "types-seaborn",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]
api-dev = [
    "httpx",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["models*", "api*"]

[tool.mypy]
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
